--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "start": "vite --open"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tippy.js": "^6.3.7",
     "ts-node": "10.9.1"
   },
   "devDependencies": {
